2004-02-26  Daniel Steffen  <das@users.sourceforge.net>

	*** 8.4.6 TAGGED FOR RELEASE ***

	* macosx/Makefile: fixed copyright year in Tcl.framework Info.plist

2004-02-25  Don Porter	<dgp@users.sourceforge.net>

	* tests/basic.test:	Made several tests more robust to the
	* tests/cmdMZ.test:	list-quoting of path names that might
	* tests/exec.test:	contain Tcl-special chars like { or [.
	* tests/io.test:	Should help us sort out Tcl Bug 554068.
	* tests/pid.test:
	* tests/socket.test:
	* tests/source.test:
	* tests/unixInit.test:

2004-02-25  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* unix/tclUnixChan.c (TcpGetOptionProc): Stop memory leak with
	very long hostnames.  [Bug 888777]

2004-02-25  David Gravereaux <davygrvy@pobox.com>

	* tests/winPipe.test:
	* win/tclWinPipe.c: backport of BuildCommandLine changes to mirror
	msvcrt's parse_cmdline() rules of quoting.

2004-02-19  Mo DeJong  <mdejong@users.sourceforge.net>

	* win/tclWinInit.c (AppendEnvironment):
	Use the tail component of the passed in
	lib path instead of just blindly using
	lib+4. That worked when lib was "lib/..."
	but fails for other values. Thanks go to
	Patrick Samson for pointing this out.

2004-02-17  Don Porter	<dgp@users.sourceforge.net>

	* doc/tcltest.n:
	* library/tcltest/tcltest.tcl:	Changed -verbose default value to
	{body error} so that detailed information on unexpected errors in
	tests is provided by default, even after the fix for [Bug 725253]

2004-02-17  Jeff Hobbs  <jeffh@ActiveState.com>

	(reverted due to test failures on Solaris, but not Win/Lin :/)
	* generic/tclIOUtil.c: backport of rewrite of generic file 
	normalization code to cope with links followed by '..'.
	[Bug 849514], and parts of [859251]
	
	* tests/unixInit.test: unixInit-7.1
	* unix/tclUnixInit.c (TclpInitPlatform): ensure the std fds exist
	to prevent crash condition [Bug #772288]

2004-02-16  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tclCmdMZ.c (TclTraceExecutionObjCmd) 